Web Inspector: Canvas Tab: starting a second recording doesn't show red titlebar if the first recording was empty https://bugs.webkit.org/show_bug.cgi?id=178805 <rdar://problem/35176303>

Reviewed by Brian Burg.

Source/WebCore:

No new tests, updated existing tests.

* inspector/InspectorCanvasAgent.cpp:
(WebCore::InspectorCanvasAgent::didFinishRecordingCanvasFrame):
If the recording was stopped and had no data, reset the CallTracingActive flag to false.

LayoutTests:

* inspector/canvas/recording-2d-expected.txt:
* inspector/canvas/recording-2d.html:


Canonical link: https://commits.webkit.org/194992@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223998 268f45cc-cd09-0410-ab3c-d52691b4dbfc